--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                       <div class="form-group">
                           <label for="result" class="col-lg-2 control-label">Your output is: </label>
                           <div class="col-lg-10">
-                                <input type="button" class="form-control btn-primary" id="result" placeholder="Please enter second value">
+                                <input type="button" class="form-control btn-primary" id="result">
                               </div>
                       </div>
                   <div class="form-group">
